--- a/invitro/analysis/_site.yml
+++ b/invitro/analysis/_site.yml
@@ -21,6 +21,10 @@ navbar:
     href: cell_cycle.html
   - text: AT1 vs AT2
     href: at1_at2.html
+  - text: in vivo
+    href: invivo.html
+  - text: SNPs
+    href: snps.html
   right:
   - icon: fab fa-github
     text: Source code
